[gd_scene load_steps=9 format=3 uid="uid://cnjyar28e0fpr"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_1sesr"]
[ext_resource type="FontFile" uid="uid://dwbtxhfdqlcs3" path="res://Fonts/Better VCR 6.1.ttf" id="2_f5q0a"]
[ext_resource type="PackedScene" uid="uid://dcavmgiger00b" path="res://combinetest.tscn" id="2_kkmpk"]
[ext_resource type="Texture2D" uid="uid://bfskvr0q2nox1" path="res://icon.svg" id="4_tal45"]
[ext_resource type="AudioStream" uid="uid://cx0gtxrw4kgus" path="res://sounds/ButtonClick.wav" id="4_vbvof"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n0a7c"]
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_51r44"]
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0gu5y"]
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[node name="Menu" type="Node2D" node_paths=PackedStringArray("Menu", "LevelSelect", "Credits", "buttonSFX")]
script = ExtResource("1_1sesr")
Menu = NodePath("Title")
LevelSelect = NodePath("LevelSelect")
Credits = NodePath("Credits")
lvl1 = ExtResource("2_kkmpk")
buttonSFX = NodePath("AudioStreamPlayer")

[node name="Title" type="Node2D" parent="."]
visible = false

[node name="TextEdit" type="TextEdit" parent="Title"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 418.0
offset_top = 212.0
offset_right = 693.0
offset_bottom = 262.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 3
theme_override_constants/line_spacing = 16
theme_override_fonts/font = ExtResource("2_f5q0a")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_n0a7c")
text = "Title of The Game"
wrap_mode = 1

[node name="StartButton" type="Button" parent="Title"]
offset_left = 94.0
offset_top = 433.0
offset_right = 194.0
offset_bottom = 457.0
theme_override_fonts/font = ExtResource("2_f5q0a")
text = "Start"

[node name="CreditsButton" type="Button" parent="Title"]
offset_left = 93.0
offset_top = 482.0
offset_right = 193.0
offset_bottom = 506.0
theme_override_fonts/font = ExtResource("2_f5q0a")
text = "Credits"

[node name="LevelSelect" type="Node2D" parent="."]

[node name="TextEdit" type="TextEdit" parent="LevelSelect"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 473.0
offset_top = 82.0
offset_right = 681.955
offset_bottom = 132.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 3
theme_override_constants/line_spacing = 16
theme_override_fonts/font = ExtResource("2_f5q0a")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_51r44")
text = "Level Select"
wrap_mode = 1

[node name="BackButton" type="Button" parent="LevelSelect"]
offset_left = 93.0
offset_top = 482.0
offset_right = 193.0
offset_bottom = 506.0
theme_override_fonts/font = ExtResource("2_f5q0a")
text = "Back
"

[node name="CenterContainer" type="CenterContainer" parent="LevelSelect"]
offset_left = 230.0
offset_top = 260.0
offset_right = 358.015
offset_bottom = 388.0

[node name="Level1TextureButton" type="TextureButton" parent="LevelSelect/CenterContainer"]
custom_minimum_size = Vector2(44, 0)
layout_mode = 2
texture_normal = ExtResource("4_tal45")

[node name="CenterContainer2" type="CenterContainer" parent="LevelSelect"]
offset_left = 430.0
offset_top = 260.0
offset_right = 558.0
offset_bottom = 388.0

[node name="Level2TextureButton" type="TextureButton" parent="LevelSelect/CenterContainer2"]
custom_minimum_size = Vector2(44, 0)
layout_mode = 2
texture_normal = ExtResource("4_tal45")

[node name="CenterContainer3" type="CenterContainer" parent="LevelSelect"]
offset_left = 630.0
offset_top = 260.0
offset_right = 758.0
offset_bottom = 388.0

[node name="Level3TextureButton" type="TextureButton" parent="LevelSelect/CenterContainer3"]
custom_minimum_size = Vector2(44, 0)
layout_mode = 2
texture_normal = ExtResource("4_tal45")

[node name="CenterContainer4" type="CenterContainer" parent="LevelSelect"]
offset_left = 830.0
offset_top = 260.0
offset_right = 958.0
offset_bottom = 388.0

[node name="Level4TextureButton" type="TextureButton" parent="LevelSelect/CenterContainer4"]
custom_minimum_size = Vector2(44, 0)
layout_mode = 2
texture_normal = ExtResource("4_tal45")

[node name="Credits" type="Node2D" parent="."]
visible = false

[node name="BackButton" type="Button" parent="Credits"]
offset_left = 93.0
offset_top = 482.0
offset_right = 193.0
offset_bottom = 506.0
theme_override_fonts/font = ExtResource("2_f5q0a")
text = "Back
"

[node name="EmployeeCredits" type="TextEdit" parent="Credits"]
offset_left = 224.0
offset_top = 116.0
offset_right = 924.0
offset_bottom = 346.0
theme_override_constants/outline_size = 3
theme_override_constants/line_spacing = 16
theme_override_fonts/font = ExtResource("2_f5q0a")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_0gu5y")
placeholder_text = "Maximilian Fowlkes - Programming and Design
Joshua Sime - Production and Design
Nathan Caruso - Art, Design, Music
Jordan McGill - Designer, Artist
Grace Dorl - Sound Effects
Ethan Haynes - Artist, Designer"
wrap_mode = 1

[node name="AssetCredits" type="TextEdit" parent="Credits"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 307.0
offset_top = 356.0
offset_right = 799.0
offset_bottom = 586.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 2
theme_override_constants/line_spacing = 16
theme_override_fonts/font = ExtResource("2_f5q0a")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxTexture_0gu5y")
placeholder_text = "Font https://www.dafont.com/better-vcr.font
Asset long url.11.2.35.fd.sdf
Asset long url.11.2.35.fd.sdf
Asset long url.11.2.35.fd.sdf
"
wrap_mode = 1

[node name="QuitButton" type="Button" parent="."]
custom_minimum_size = Vector2(1.32, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 93.0
offset_top = 530.0
offset_right = 193.0
offset_bottom = 554.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_f5q0a")
text = "Quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_vbvof")
bus = &"SFX"

[connection signal="pressed" from="Title/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Title/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="LevelSelect/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="LevelSelect/CenterContainer/Level1TextureButton" to="." method="_on_level_1_texture_button_pressed"]
[connection signal="pressed" from="LevelSelect/CenterContainer2/Level2TextureButton" to="." method="_on_level_2_texture_button_pressed"]
[connection signal="pressed" from="LevelSelect/CenterContainer3/Level3TextureButton" to="." method="_on_level_3_texture_button_pressed"]
[connection signal="pressed" from="LevelSelect/CenterContainer4/Level4TextureButton" to="." method="_on_level_4_texture_button_pressed"]
[connection signal="pressed" from="Credits/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
